# fluxflex-haskellinfo

./: .flx  .gitignore  Controller.hs  HaskellInfo.hs  Model.hs  flexflux-haskellinfo.cabal  fluxflex-haskellinfo.cabal
Handler/: Index.hs
Model/: Internal.hs
Model/Internal/: Configure.hs
config/: Settings.hs  flexflux-haskellinfo.hs  routes
hamlet/: default-layout.hamlet  index.hamlet
lucius/: default-layout.lucius
public_html/: .htaccess
