name:              fluxflex-haskellinfo
version:           0.0.2
license:           BSD3
license-file:      LICENSE
author:            Mitsutoshi Aoe
maintainer:        Mitsutoshi Aoe
synopsis:          The greatest Yesod web application ever.
description:       I'm sure you can say something clever here if you try.
category:          Web
stability:         Experimental
cabal-version:     >= 1.6
build-type:        Simple
homepage:          http://haskell-info.fluxflex.com/

Flag production
    Description:   Build the production executable.
    Default:       True

Flag devel
    Description:   Build for use with "yesod devel"
    Default:       False

library
    if flag(devel)
        Buildable: True
    else
        Buildable: False
    exposed-modules: Controller
    hs-source-dirs: ., config
    other-modules:   HaskellInfo
                     Settings
                     StaticFiles
                     Handler.Index

executable         fluxflex-haskellinfo
    if flag(devel)
        Buildable: False

    if flag(production)
        cpp-options:   -DPRODUCTION
        ghc-options:   -Wall -threaded -O2
    else
        ghc-options:   -Wall -threaded

    main-is:       config/fluxflex-haskellinfo.hs
    hs-source-dirs: ., config

    build-depends: base                >= 4 && < 5
                 , Cabal
                 , bytestring
                 , directory
                 , hamlet              >= 0.8.1 && < 0.9
                 , template-haskell
                 , text
                 , transformers        == 0.2.*
                 , wai                 == 0.4.*
                 , wai-handler-fastcgi == 0.4.*
                 , yesod-core          == 0.8.3.2
                 , yesod-static        == 0.1.*
    ghc-options:   -Wall -threaded
